--- a/angular.json
+++ b/angular.json
@@ -94,8 +94,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "fe9a46e6-2df1-4fce-91ef-1cc9f8a6f467"
   }
 }
